# ai-contained-provider-template

./: .dockerignore  Dockerfile  PROVIDER.md  README.md  pyproject.toml
.github/workflows/: ci.yaml
downgrade_exec/: check.go  check_test.go  go.mod  main.go  main_suite_test.go
src/ai_contained/provider/shell/: __init__.py  execute_bash.py  read_bash.py  write_command.py
tests/: conftest.py  test_execute_bash.py  test_read_bash.py  test_write_command.py
