[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-contained-provider-shell"
version = "0.1.0"
description = "Give your AI-Contained Agent controlled access to your command shell."
requires-python = ">=3.12"
dependencies = [
    "ai-contained-core-mcp>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=1.0",
    "pytest-describe>=3.1",
    "assertpy>=1.1",
    "mypy>=1.20.2",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "focus: run only focused tests (use with -m focus)",
]

[project.entry-points."ai_contained.provider"]
shell = "ai_contained.provider.shell:register"

[tool.mypy]
mypy_path = "src"
explicit_package_bases = true
strict = true

[tool.hatch.build.targets.wheel]
packages = ["src/ai_contained"]
