[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-contained-provider-shell"
version = "0.1.0"
description = "Give your AI-Contained Agent controlled access to your command shell."
requires-python = ">=3.12"
dependencies = [
    "ai-contained-core-mcp @ https://github.com/AI-Contained/ai-contained-base/archive/refs/tags/v0.2.0.zip#subdirectory=packages/core-mcp",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=1.0",
    "pytest-describe>=3.1",
    "assertpy>=1.1",
    "mypy>=1.20.2",
    "ruff>=0.15.12",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "focus: run only focused tests (use with -m focus)",
]

[project.entry-points."ai_contained.provider"]
shell = "ai_contained.provider.shell:register"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "D"]
ignore = ["D203", "D213"]  # conflict with D211/D212

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D"]  # no docstrings required in tests

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
mypy_path = "src"
explicit_package_bases = true
strict = true

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "D"]
ignore = ["D203", "D213"]  # conflict with D211/D212

[tool.ruff.lint.isort]
known-first-party = ["ai_contained"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D"]  # no docstrings required in tests

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
mypy_path = "src"
explicit_package_bases = true
strict = true

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/ai_contained"]
